tests/negative-fixtures/banned_hashmap_direct_path/src/lib.rs
pub fn unordered_map() -> std::collections::HashMap<String, u8> {
    std::collections::HashMap::new()
}
